--- a/Project-5/style.css
+++ b/Project-5/style.css
@@ -61,3 +61,12 @@ img {
 .left-hero {
   font-size: 40px;
 }
+
+.slider {
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: #18181a;
+  width: 100%;
+  height: 100%;
+}
