added styles for fade

--- a/Project-7/style.css
+++ b/Project-7/style.css
@@ -37,6 +37,12 @@ p {
   text-align: center;
   color: black;
   font-weight: 500;
+  opacity: 0;
+}
+
+.fade {
+  opacity: 1;
+  transition: opacity 1.5s;
 }
 
 button {
