--- a/Project-05/style.css
+++ b/Project-05/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
+
 * {
   margin: 0;
   padding: 0;
@@ -5,68 +7,53 @@
 }
 
 body {
-  background-color: black;
-  color: white;
-  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-}
-
-.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   min-height: 100vh;
-  width: 1200px;
-  margin: auto;
+  font-family: "Poppins", sans-serif;
+  cursor: none;
+  background-color: black;
 }
 
-.nav {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 10px 0;
-}
-
-.left {
-  display: flex;
-  align-items: baseline;
-}
-
-.right {
-  right: 0;
-}
-
-h2 {
-  font-size: 34px;
-}
-
-h3 {
-  font-size: 30px;
-  margin-right: 10px;
-}
-
-.left h2 {
-  color: blueviolet;
-}
-
-img {
-  width: 320px;
-  height: 450px;
-  border-radius: 5%;
-}
-
-.hero {
-  min-height: 650px;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-}
-
-.left-hero {
-  font-size: 40px;
-}
-
-.slider {
+.cursor {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background: skyblue;
+  pointer-events: none;
+  box-shadow: 0 0 20px skyblue, 0 0 60px skyblue, 0 0 100px skyblue;
+  z-index: 999;
+  display: none;
   position: fixed;
-  top: 0;
-  left: 0;
-  background-color: #18181a;
-  width: 100%;
-  height: 100%;
+  transform: translate(-50%, 50%);
+  animation: colors 3s infinite;
+  -webkit-animation: colors 3s infinite;
+}
+
+@keyframes colors {
+  0% {
+    filter: hue-rotate(0deg);
+    -webkit-filter: hue-rotate(0deg);
+  }
+  100% {
+    filter: hue-rotate(360deg);
+    -webkit-filter: hue-rotate(360deg);
+  }
+}
+
+h1 {
+  color: white;
+  font-size: 100px;
+}
+
+.cursor::before {
+  content: "";
+  position: absolute;
+  transform: translate(-30%, -30%);
+  width: 50px;
+  height: 50px;
+  background: skyblue;
+  border-radius: 50%;
+  opacity: 0.2;
 }
