--- a/Project-07/style.css
+++ b/Project-07/style.css
@@ -7,56 +7,59 @@
   font-family: "Poppins", sans-serif;
 }
 
+html {
+  font-size: 62.5%;
+}
+
 body {
   display: flex;
   align-items: center;
   justify-content: center;
   min-height: 100vh;
-  background-color: yellow;
+  background-color: blueviolet;
 }
 
 .container {
   width: 500px;
   min-height: 200px;
   padding: 20px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   flex-direction: column;
-  background-color: yellowgreen;
+  background-color: white;
   border-radius: 20px;
-  box-shadow: inset 0 0 40px rgba(0, 0, 0, 0.6);
+  box-shadow: 0 0 40px rgba(0, 0, 0, 0.6);
 }
 
-img {
-  width: 150px;
-  height: 150px;
-}
-
-p {
+h1 {
   text-align: center;
-  color: black;
-  font-weight: 500;
-  opacity: 0;
+  font-size: 3rem;
+  color: blueviolet;
+  text-transform: uppercase;
+  text-shadow: 1px 1px black;
+  margin-bottom: 1.5rem;
 }
 
-.fade {
-  opacity: 1;
-  transition: opacity 1.5s;
+.search-container {
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+  gap: 2rem;
+}
+
+input {
+  padding: 5px 10px;
+  font-weight: 500;
+  border: none;
+  border-bottom: 2px solid blueviolet;
+}
+
+textarea:focus,
+input:focus {
+  outline: none;
 }
 
 button {
-  padding: 10px 25px;
-  margin-top: 20px;
-  font-weight: bold;
-  box-shadow: 5px 5px 0;
+  background-color: blueviolet;
+  border: none;
+  color: white;
+  border-radius: 2rem;
   cursor: pointer;
-  position: relative;
-}
-
-button:active {
-  position: relative;
-  top: 5px;
-  left: 5px;
-  box-shadow: none;
 }
