css code is completed

--- a/Project-07/style.css
+++ b/Project-07/style.css
@@ -21,7 +21,7 @@ body {
 
 .container {
   width: 500px;
-  min-height: 200px;
+  min-height: 150px;
   padding: 20px;
   flex-direction: column;
   background-color: white;
@@ -40,7 +40,7 @@ h1 {
 
 .search-container {
   display: grid;
-  grid-template-columns: 3fr 1fr;
+  grid-template-columns: 9fr 3fr;
   gap: 2rem;
 }
 
@@ -48,12 +48,8 @@ input {
   padding: 5px 10px;
   font-weight: 500;
   border: none;
-  border-bottom: 2px solid blueviolet;
-}
-
-textarea:focus,
-input:focus {
   outline: none;
+  border-bottom: 2px solid blueviolet;
 }
 
 button {
@@ -62,4 +58,54 @@ button {
   color: white;
   border-radius: 2rem;
   cursor: pointer;
+}
+
+.result {
+  margin-top: 10px;
+}
+
+.result .flag-img {
+  display: block;
+  width: 45%;
+  min-width: 7.5em;
+  margin: 1.8em auto 1.2em auto;
+}
+
+.result h2 {
+  font-weight: 600;
+  color: #222a43;
+  text-align: center;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  margin-bottom: 1.8em;
+}
+
+.result .data-wrapper {
+  margin-bottom: 1em;
+  letter-spacing: 0.3px;
+}
+.result h4 {
+  display: inline;
+  font-weight: 500;
+  color: #222a43;
+}
+
+.result span {
+  color: #5d6274;
+}
+
+.result h3 {
+  margin-top: 10px;
+  text-align: center;
+  font-size: 1.2em;
+  font-weight: 400;
+  color: #ff465a;
+}
+
+.result .loading {
+  margin-top: 10px;
+  margin-bottom: -10px;
+  color: black;
+  font-size: 15px;
+  text-align: center;
 }
