--- a/Project-44/style.css
+++ b/Project-44/style.css
@@ -11,7 +11,14 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   min-height: 100vh;
+  background-color: lightgrey;
+}
+
+h1 {
+  margin-bottom: 10px;
+  color: darkcyan;
 }
 
 .container {
